# advent-of-code

./: .gitignore  README.md
2020/day-7/: day7.py
2021/01/: 01-b.cpp  01.cpp  Makefile
2021/02/: 02.cpp  Makefile
2021/03/: 03.cpp  Makefile
2022/: template.py
2022/01/: main.py  min.py  part2.py
2022/02/: main.py  part2-orig.py  part2.py
2022/03/: main.py  part2.py
2022/04/: main.py  part2.py
2022/05/: main.py  part2.py
2022/06/: golf.py  main.py
2022/07/: main.py  part2.py
2022/08/: faster.py  main.py  part2.py
2022/09/: main.py  part2-orig.py  part2.py
2022/10/: golf.py  main.py  part2.py
2022/11/: clean.py  main.py  part2.py
2022/12/: cleanup.py  main.py  part2.py
2022/13/: main.py  other.py  part2.py
2022/14/: main.py  part2.py
2022/15/: interval_tree.py  main.py  naive.py  part2.py
2023/: Cargo.toml
2023/benches/: example_benchmark.rs
2023/src/: main.rs
2023/src/day_01/: mod.rs
2023/src/day_02/: mod.rs
2023/src/day_03/: mod.rs
2023/src/day_04/: mod.rs
2023/src/day_07/: mod.rs
2023/src/day_09/: mod.rs
2023/src/day_11/: mod.rs
2023/src/day_19/: mod.rs
2024/rust/day_01/src/: main.rs
2024/rust/day_02/src/: main.rs
2024/rust/day_03/src/: main.rs
2024/rust/day_04/src/: main.rs
2024/rust/day_05/src/: main.rs
2024/rust/day_06/src/: main.rs
2024/rust/day_07/src/: main.rs
