[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lints.rust]
dead_code = "allow"

[[bench]]
name = "example_benchmark"
harness = false

[dev-dependencies]
criterion = "0.5.1"
dhat = "0.3.2"
